// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchAvailableDawlets fetches available dawlets 1`] = `
Array [
  "algolet",
]
`;

exports[`fetchAvailableDawlets reads packages folder 1`] = `
Array [
  "algolet",
  "common-utils",
  "core",
  "launcher",
  "react-electron-webpack-config",
]
`;
